# nSpace

./: LICENSE.TXT
c/: Boost.props  CMakeLists.txt  CommandLine.txt  Makefile  Makefile.rules  WebSocketspp.props  makefile  nSpace.2015.sln  nSpace.sln
c/app/: CMakeLists.txt  Makefile
c/app/nsh/: CMakeLists.txt  Makefile  main.cpp  makefile  nsh.2015.vcxproj  nsh.h  nsh.vcxproj  nsh.vcxproj.2015.filters  nsh.version
c/dll/: CMakeLists.txt  Makefile  dll.def
c/dll/adtn/: CMakeLists.txt  Makefile  adtn.2015.vcxproj  adtn.cpp  adtn.vcxproj  adtn.vcxproj.filters  makefile
c/dll/imagen/: CMakeLists.txt  imagen.2015.vcxproj  imagen.2015.vcxproj.filters  imagen.cpp  imagen.vcxproj  imagen.vcxproj.filters
c/dll/ion/: CMakeLists.txt  Makefile  ion.2015.vcxproj  ion.cpp  ion.vcxproj  ion.vcxproj.filters  makefile
c/dll/mathn/: CMakeLists.txt  Makefile  makefile  mathn.2015.vcxproj  mathn.cpp  mathn.vcxproj  mathn.vcxproj.2015.filters
c/dll/median/: CMakeLists.txt  median.2015.vcxproj  median.2015.vcxproj.filters  median.cpp
c/dll/miscn/: CMakeLists.txt  Makefile  makefile  miscn.2015.vcxproj  miscn.cpp  miscn.vcxproj  miscn.vcxproj.filters
c/dll/netn/: CMakeLists.txt  Makefile  makefile  netn.2015.vcxproj  netn.cpp  netn.vcxproj  netn.vcxproj.2015.filters
c/dll/nspcn/: CMakeLists.txt  Makefile  makefile  nspcn.2015.vcxproj  nspcn.cpp  nspcn.vcxproj  nspcn.vcxproj.2015.filters
c/dll/openssln/: CMakeLists.txt  openssln.2015.vcxproj  openssln.2015.vcxproj.filters  openssln.cpp
c/dll/pcln/: pcln.2015.vcxproj  pcln.2015.vcxproj.filters  pcln.cpp
c/dll/plotn/: CMakeLists.txt  plotn.2015.vcxproj  plotn.2015.vcxproj.filters  plotn.cpp  plotn.vcxproj  plotn.vcxproj.filters
c/dll/sqln/: CMakeLists.txt  sqln.2015.vcxproj  sqln.2015.vcxproj.filters  sqln.cpp  sqln.vcxproj  sqln.vcxproj.filters
c/dll/sysn/: CMakeLists.txt  Makefile  makefile  sysn.2015.vcxproj  sysn.cpp  sysn.vcxproj  sysn.vcxproj.filters
c/dll/usbn/: CMakeLists.txt  usbn.2015.vcxproj  usbn.cpp  usbn.vcxproj  usbn.vcxproj.2015.filters
c/dll/visualizen/: CMakeLists.txt  visualizen.cpp
c/dll/widgetn/: widgetn.2015.vcxproj  widgetn.2015.vcxproj.filters  widgetn.cpp
c/dll/wmin/: CMakeLists.txt  wmin.2015.vcxproj  wmin.cpp  wmin.vcxproj  wmin.vcxproj.2015.filters
c/doc/: Doxyfile
c/lib/: CMakeLists.txt  Makefile
c/lib/adtl/: Bool.cpp  CMakeLists.txt  Dictionary.cpp  Double.cpp  IUnknown.cpp  Int.cpp  List.cpp  Makefile  Queue.cpp  Store.cpp  String.cpp  Value.cpp  Variant.cpp  adtl.2015.vcxproj  adtl.h  adtl.vcxproj  adtl.vcxproj.2015.filters  adtl_.h  avl.cpp  date.cpp  float.cpp  iterate.cpp  keys.cpp  load.cpp  long.cpp  remove.cpp  stack.cpp  stat.cpp  store.cpp  string.cpp  value.cpp  variant.cpp  write.cpp
c/lib/ccl/: CMakeLists.txt  Makefile  ccl.2015.vcxproj  ccl.cpp  ccl.h  ccl.sln  ccl.vcxproj  ccl.vcxproj.filters  ccl.version  ccl_impl.cpp  ccl_impl.h  factory.cpp  makefile  object.cpp  register.cpp  uuids.txt
c/lib/ext/: CMakeLists.txt
c/lib/imagel/: At.cpp  Binary.cpp  CMakeLists.txt  CascadeClassifier.cpp  Codec.cpp  Contours.cpp  Convert.cpp  Create.cpp  Distance.cpp  Draw.cpp  FFT.cpp  FaceRecognizer.cpp  Features.cpp  Flip.cpp  Gradient.cpp  Match.cpp  Morph.cpp  Normalize.cpp  PersistImage.cpp  Prepare.cpp  Resize.cpp  Roi.cpp  Smooth.cpp  Stats.cpp  Threshold.cpp  Tomography.cpp  Transform.cpp  VideoCapture.cpp  VideoWriter.cpp  at.cpp  binary.cpp  codec.cpp  contours.cpp  convert.cpp  create.cpp  cvMatRef.cpp  cvmatref.cpp  distance.cpp  draw.cpp  features.cpp  (+26 more)
c/lib/iol/: ByteCache.cpp  CMakeLists.txt  Dispatch.cpp  EnumDevices.cpp  File.cpp  Lock.cpp  Makefile  MemoryBlock.cpp  NotifyDevices.cpp  Persist.cpp  Resource.cpp  Serial.cpp  StmFile.cpp  StmMemory.cpp  StmOnByteStm.cpp  StmPrsBin.cpp  StmPrsXML.cpp  StmSrcFile.cpp  StmSrcStg.cpp  StmStg.cpp  StmZlib.cpp  StreamCopy.cpp  StreamSource.cpp  dispatch.cpp  enumcls.cpp  enumdevs.cpp  file.cpp  iol.2015.vcxproj  iol.h  iol.vcxproj  iol.vcxproj.2015.filters  iol.vcxproj.filters  iol_.h  makefile  memblck.cpp  notifydevs.cpp  persist.cpp  resource.cpp  serial.cpp  stmcopy.cpp  (+7 more)
c/lib/mathl/: CMakeLists.txt  Makefile  binary.cpp  counter.cpp  datablk.cpp  formula.cpp  function.cpp  line.cpp  mat3d.cpp  mathl.2015.vcxproj  mathl.cpp  mathl.h  mathl.vcxproj  mathl.vcxproj.2015.filters  mathl.vcxproj.filters  mathl_.h  trans3d.cpp  unary.cpp
c/lib/medial/: CMakeLists.txt  Speak.cpp  medial.2015.vcxproj  medial.2015.vcxproj.filters  medial.h  medial_.h  speak.cpp
c/lib/miscl/: AsyncEmit.cpp  CMakeLists.txt  Create.cpp  Debug.cpp  Decode.cpp  DictFormat.cpp  DictParse.cpp  Makefile  StringFormat.cpp  StringParse.cpp  TokenIt.cpp  Type.cpp  UUIDOp.cpp  asynce.cpp  asyncq.cpp  clone.cpp  compare.cpp  create.cpp  dctfmt.cpp  dctprs.cpp  debug.cpp  decode.cpp  demux.cpp  dist.cpp  makefile  miscl.2015.vcxproj  miscl.h  miscl.vcxproj  miscl.vcxproj.2015.filters  miscl_.h  path.cpp  strfmt.cpp  string.cpp  strprs.cpp  strstm.cpp  time.cpp  timer.cpp  toggle.cpp  tokenit.cpp  type.cpp
c/lib/netl/: CMakeLists.txt  Makefile  address.cpp  avail.cpp  client.cpp  dgram.cpp  intfs.cpp  makefile  multicast.cpp  netl.2015.vcxproj  netl.cpp  netl.h  netl.vcxproj  netl.vcxproj.filters  netl_.h  persist.cpp  recv.cpp  send.cpp  socket.cpp  webskt.cpp
c/lib/nshl/: CMakeLists.txt  Makefile  embed.reg  maindef.cpp  mainsvc.cpp  mainx.cpp  makefile  nshl.2015.vcxproj  nshl.cpp  nshl.h  nshl.idl  nshl.vcxproj  nshl.vcxproj.filters  nshl_.h  nshle_h.h  nshle_i.c  recepx.cpp  shell.cpp  shellx.cpp  shfctx.cpp  spcx.cpp
c/lib/nshxl/: CMakeLists.txt  client.cpp  nshle_h.h  nshle_i.c  nshxl.2015.vcxproj  nshxl.h  nshxl.vcxproj  nshxl.vcxproj.2015.filters  nshxl.vcxproj.filters
c/lib/nspcl/: CMakeLists.txt  Makefile  behave.cpp  connect.cpp  connlst.cpp  conns.cpp  glbnspc.cpp  keypath.cpp  link.cpp  loc.cpp  makefile  namespc.cpp  nspcl.2015.vcxproj  nspcl.cpp  nspcl.h  nspcl.vcxproj  nspcl.vcxproj.2015.filters  nspcl.vcxproj.filters  nspcl_.h  parser.cpp  reflect.cpp  tempimpl.cpp  temploc.cpp  temporal.cpp  this.cpp  value.cpp
(+317 files in other folders)
